src/objects/jj_rb_Rebate_SAP_Job__c.object
<CustomObject>
    <fields>
        <fullName>jj_rb_Notification_Email__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <description>Email address to which a notification email will be sent upon SAP job completion</description>
        <inlineHelpText>Email address to which a notification email will be sent upon SAP job completion</inlineHelpText>
        <label>Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>jj_rb_Remaining_Files__c</fullName>
        <description>Number of files that still have to be processed, populated by the APEX logic loading the files</description>
        <inlineHelpText>Number of files that still have to be processed, populated by the APEX logic loading the files</inlineHelpText>
        <label>Remaining Files</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_Status__c</fullName>
        <description>Status of the job</description>
        <inlineHelpText>Status of the job - jobs in &quot;Ready&quot; state can be processed</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jj_rb_System_Message__c</fullName>
        <description>System field, used to provide feedback to the user on the result of the job</description>
        <inlineHelpText>System field, feedback on the result of the job</inlineHelpText>
        <label>System Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Rebate SAP Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RBSAP-{0000}</displayFormat>
        <label>Rebate SAP Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate SAP Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>